--- a/src/assets/flex.scss
+++ b/src/assets/flex.scss
@@ -4,13 +4,15 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
-
 }
 .container{
-  max-width: 1520px;
+  max-width: 1340px;
+
+  //max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 15px;
+
 
 }
 .G-image{
