--- a/src/pages/components/cooperationWork/style.scss
+++ b/src/pages/components/cooperationWork/style.scss
@@ -53,96 +53,106 @@
 
 }
 
-.cooperation_list_border {
+
+.cooperation_list_item:nth-child(2) .cooperation_item_text_block {
+  background-color: $red;
+
+}
+.cooperation_list_item:nth-child(4) .cooperation_item_text_block {
+  background-color: $red;
+
+}
+.cooperation_list_item:nth-child(2) .cooperation_list_item_border {
+  border: 2px solid $black;
+
+}
+.cooperation_list_item:nth-child(4) .cooperation_list_item_border {
+  border: 1px solid $black;
+
+}
+.cooperation_list_item:nth-child(2) .cooperation_item_img::before {
+  border: 40px solid transparent;
+  border-bottom: 30px solid $red;
+
+}
+.cooperation_list_item:nth-child(4) .cooperation_item_img::before {
+  border: 40px solid transparent;
+  border-bottom: 30px solid $red;
+
+}
+.cooperation_list_item_border{
+    position: absolute;
+  border-radius: 4px;
+  border: 2px solid #8D1038;
+  width: 90%;
   height: 100%;
-  border: 1.518px solid;
+}
+.cooperation_item_img{
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+  span{
+     @include adaptive_fontSize(20px , 40)
+  }
+
+  &::before{
+    position: absolute;
+    content: '';
+    bottom: 0;
+    border: 40px solid transparent;
+    border-bottom: 30px solid $black;
+
+  }
+
+}
+.cooperation_item_text_block{
+   background-color: black;
+  color: white;
+  padding: 44px 16px;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
 
 
-}
-
-.cooperation_list_item_img {
-  padding: 30px 120px;
-}
-
-.cooperation_list_item_text {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  left: 0;
-  bottom: 0;
-
-  p {
-    padding: 69px 12px 44px;
+  p{
+    color: #FFF;
     text-align: center;
-    color: white;
-  }
- &::before{
-    position: absolute;
-   content: '';
-   left: 32%;
-    top: -99px; /* Положение треугольника */
-   border: 50px solid transparent; /* Прозрачные границы */
-   border-bottom: 50px solid green; /* Добавляем треугольник */
-
- }
-  span{
-     font-size: $fontSize33;
-    color: white;
-    position: absolute;
-    left: 48%;
-    top: -30px;
-    text-align: center;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 52.8px */
+    font-weight: 400;
+    line-height: normal;
+  }
+
+}
+.cooperation_item_text_before{
+   position: absolute;
+  top: -20px;
+  font-weight: bold;
+  font-size: 40px;
+
+}
+.cooperation_btn{
+  margin-top: 41px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  button{
+    padding: 14px 60px;
+    background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+    border-radius: 4px;
+    color: $white;
+    text-align: center;
+    font-size: $fontSize22;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 154.3%; /* 33.946px */
     text-transform: uppercase;
-  }
-}
-
-
-.cooperation_list_item:nth-child(even) .cooperation_list_item_text {
-  background-color: $red;
-
-    &::before{
-      border: 50px solid transparent; /* Прозрачные границы */
-      border-bottom: 50px solid $red; /* Добавляем треугольник */
-
-    }
-
-}
-
-
-.cooperation_list_item:nth-child(1) .cooperation_list_item_text {
-  background-color: $black;
-  &::before{
-    border: 50px solid transparent; /* Прозрачные границы */
-    border-bottom: 50px solid $black; /* Добавляем треугольник */
 
   }
-}
-
-.cooperation_list_item:nth-child(3) .cooperation_list_item_text {
-  background-color: $black;
-  &::before{
-    border: 50px solid transparent; /* Прозрачные границы */
-    border-bottom: 50px solid $black; /* Добавляем треугольник */
-
-  }
-
-}
-
-.cooperation_list_item:nth-child(5) .cooperation_list_item_text {
-  background-color: $black;
-  &::before{
-    border: 50px solid transparent; /* Прозрачные границы */
-    border-bottom: 50px solid $black; /* Добавляем треугольник */
-
-  }
-
-}
-.cooperation_list_item_img{
 
 }
