--- a/src/pages/components/ourServices/style.scss
+++ b/src/pages/components/ourServices/style.scss
@@ -85,7 +85,7 @@
     //    font-size: 22px;
     font-size: calc(15px + 15 * (100vw / 1920));
     font-style: italic;
-    font-weight: bold;
+    font-weight: 500;
     line-height: calc(15px + 17 * (100vw / 1920));
     display: block;
     max-width: 623px;
