--- a/src/pages/header/style.scss
+++ b/src/pages/header/style.scss
@@ -66,6 +66,11 @@
     cursor: pointer;
     border-radius: 4px;
     text-transform: uppercase;
+    font-family: Barlow Condensed;
+    font-size: $fontSize14;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 21px;
 
 
   }
@@ -110,13 +115,13 @@
   background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
   color: white;
   padding: 11px 39px;
-
   min-width: 162px;
   font-size: $fontSize14;
   font-style: normal;
   font-weight: 600;
   line-height: 154.3%; /* 21.602px */
   text-transform: uppercase;
+  font-family: Barlow Condensed;
 
 
 }
