--- a/src/assets/flex.scss
+++ b/src/assets/flex.scss
@@ -4,12 +4,17 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
+  //border-left: 4px solid red;
+  //border-right: 4px solid red;
+  position: relative;
 }
 .container{
   max-width: 1394px;
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
+  //border-left: 4px solid green;
+  //border-right: 4px solid green;
 
 
 
