--- a/src/pages/components/menu/style.scss
+++ b/src/pages/components/menu/style.scss
@@ -3,7 +3,8 @@
   ul {
     display: flex;
     align-items: center;
-    gap: 60px;
+    //gap: 60px;
+    column-gap: calc(20px + (70 - 20) * ((100vw - 320px) / (1680 - 320)));
 
     li{
 
