--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -1,14 +1,23 @@
 @import "src/assets/variables";
 @import "src/assets/@mixin";
 
+.left_border_block {
+  position: absolute;
+  height: 100%;
+  width: 1px;
+  left: 40px;
+  top: 0;
+  background-color: black;
+}
+
 .section_telephone_sales {
   margin-top: 101px;
 
-
-
 }
-.home_rotate_logo .G-container {
-  position: relative;
+
+.rotate_logo_block {
+  min-height: 100px;
+
 }
 
 .rotate_logo {
@@ -20,6 +29,14 @@
 
 }
 
+.border_top_block {
+  position: absolute;
+  height: 1px;
+  width: 80%;
+  left: 40px;
+  bottom: 0;
+  background-color: black;
+}
 
 @keyframes logo {
   from {
@@ -32,24 +49,47 @@
 
 }
 
-.telephone_sales_body {
+.section_telephone_sales_content {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: -20px;
+    width: 20%;
+    height: 1px;
+    background-color: $black;
+  }
+}
+
+.telephone_sales_content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
+
+
+  &::before {
+    position: absolute;
+
+  }
 }
-//.container_before{
-//  position: relative;
-//  &::before{
-//    content: '';
-//    position: absolute;
-//    top: 0;
-//    height: 100%;
-//    width: 1px;
-//    background-color: black;
-//  }
-//}
+
+.telephone_sales_body {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 30%;
+    background-color: black;
+    right: 0;
+    top: 0;
+  }
+}
 
 .telephone_sales_text {
   padding: 42px 0 0 0;
@@ -102,42 +142,95 @@
 
   }
 }
-.telephone_sales_img{
+
+.telephone_sales_img {
   margin-right: 55px;
-transition: .3s;
-  &.hover{
+  transition: .3s;
+
+  &.hover {
     transform: rotate(20deg) scale(.9);
   }
+}
+
+․home_ellipse_large {
+  max-width: 140px;
+  max-height: 140px;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+
+
 }
 
 .home_ellipse_img {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 61px;
   position: relative;
   cursor: pointer;
 
 
+}
+
+.home_ellipse_block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  position: relative;
+
   &::before {
     position: absolute;
     content: '';
-    width: 120px;
+    width: 1px;
     height: 120px;
-    border-radius: 50%;
-    border: 1px solid $red;
+    background-color: $black;
+    top: 0;
+    right: 560px;
+
   }
 
   &::after {
     position: absolute;
     content: '';
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 1px solid $red;
+    width:200px;
+    height: 1px;
+    right: 400px;
+    background-color: $black;
+    bottom: 0;
   }
 
+}
 
+.home_ellipse_large {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 150px;
+  border: 2px solid rgba(185, 18, 84, 0.10);
+  border-radius: 50%;
+
+}
+
+.home_ellipse_medium {
+  width: 70%;
+  height: 70%;
+  border: 2px solid rgba(185, 18, 84, 0.10);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home_ellipse_small {
+  width: 70%;
+  height: 70%;
+  border: 2px solid rgba(185, 18, 84, 0.10);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .our_telephone_sales_section {
