--- a/src/pages/components/portfolio/style.scss
+++ b/src/pages/components/portfolio/style.scss
@@ -13,17 +13,22 @@
 
   h3 {
     position: relative;
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
 
-    &:before {
+    &::before {
       content: '';
       position: absolute;
-      width: 20%;
+      width: 0;
       height: 1px;
       background-color: red;
       bottom: -10px;
+      transition: 3s;
+    }
+
+    &.active::before {
+      width: 50%;
 
     }
 
@@ -48,10 +53,8 @@
 }
 
 .services_portfolio_items {
-  display: grid;
+  display: flex;
   margin-top: 41px;
-  grid-template-columns: repeat(5, 1fr);
-  row-gap: 2px;
 
 
 }
@@ -63,7 +66,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  //width: 16.6%;
+  width: 16.6%;
   min-height: 670px;
 
   h3 {
@@ -74,20 +77,28 @@
     font-weight: 500;
     line-height: normal;
     text-transform: uppercase;
-    padding: 73px 35px 0;
+    padding: 73px 5px 0;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
-    &:before {
+    &::before {
       content: '';
       position: absolute;
-      width: 20%;
-      height: 1px;
+      width: 0;
+      height: 2px;
       background-color: $white;
       bottom: -10px;
+      transition: 3s;
+
+
+    }
+    &.active{
+     &::before{
+        width: 50%;
+     }
     }
   }
 
