--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -9,7 +9,7 @@
     content: '';
     position: absolute;
     right: 0;
-    top: 30px;
+    top: 0;
     width: 0;
     height: 2px;
     background-color: $black;
@@ -33,14 +33,7 @@
   padding: 120px 0 0;
 
 
-  &::before {
-    content: '';
-    background-color: black;
-    width: 100px;
-    height: 2px;
-    position: absolute;
 
-  }
 
 }
 
@@ -54,7 +47,7 @@
     height: 0;
     background-color: black;
     right: 0;
-    top: 60px;
+    top: 30px;
     transition: 3s;
   }
 
